--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -16,7 +16,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "flowbite-react": "^0.6.0",
-    "next": "13.4.19",
+    "next": "13.4.9",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
     "react": "18.2.0",
