--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "flowbite-react": "^0.6.0",
+    "jest-worker": "^29.7.0",
     "next": "13.4.9",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
